--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="/about.html">About Us</a></li>
 	    <!--<li><a href="/sponsors.html">Our Sponsors</a></li>-->
 	    <!--<li><a href="/exec_page/exec_2023.html">Executive Team</a></li>-->
-            <li><a href="https://uqmars.com/sponsorship/">Sponsorship</a></li>
+      <!--<li><a href="https://uqmars.com/sponsorship/">Sponsorship</a></li>-->
 	    <!--<li><a href="/events/events.html">Events</a></li>-->
 	    <!--<li><a href="/blog-posts/blog.html">Blog</a></li>-->
 	    <!--<li><a href="/projects/projects.html">Projects</a></li>-->
@@ -103,6 +103,11 @@
             <img src="/images/logos/sponsors/Chelona_Group.png" class="sponsor-image-silver" alt="Chelona Engineering Logo"/>
           </div>
           <br>
+          <h3 class="sponsor-title">Bronze Tier</h3>
+          <div class="sponsor-div">
+            <!-- Bronze Tier -->
+            <img src="/images/logos/sponsors/JaneStreet.png" class="sponsor-image-bronze" alt="Jane Street"/>
+          </div>
           <div class="inner">
             <a href="/about.html" class="image"
               ><img src="/images/Josh_and_Nicole.jpg" alt=""
